Updated README with final changes