@@ -1,111 +1,131 @@
-# Chess Game
+# JavaFX Chess Game
+
+A fully-featured Chess application built with JavaFX, offering:
+
+- **Human vs. Human** or **Human vs. AI** play (Stockfish engine integration)  
+- Adjustable **AI difficulty** (Easy, Medium, Hard, Expert)  
+- **Themes** (board color schemes), **Dark Mode**, and **Board Flip**  
+- Responsive to any screen size (auto-scales to available resolution)  
+- Full chess rules: legal moves, check/checkmate, stalemate, castling, pawn promotion  
+
+---
 
 ## Table of Contents
-- [Description](#description)
-- [Features](#features)
-- [Prerequisites](#prerequisites)
-- [Installation](#installation)
-- [Usage](#usage)
-- [Configuration](#configuration)
-- [Controls](#controls)
-- [Contributing](#contributing)
-- [License](#license)
-- [Acknowledgments](#acknowledgments)
 
-## Description
-A fully-featured JavaFX-based Chess game offering:
-- Custom-drawn chess pieces and board UI
-- Standard chess rules (move validation, castling, en passant, pawn promotion)
-- Single-player mode against Stockfish AI with adjustable difficulty levels
-- Two-player network mode (host or join via IP & port)
-- Theme selection, dark mode, and board flipping
-- Real-time game log and status updates
+1. [Demo](#demo)  
+2. [Features](#features)  
+3. [Getting Started](#getting-started)  
+   - [Prerequisites](#prerequisites)  
+   - [Clone & Build](#clone--build)  
+4. [Usage](#usage)  
+5. [Contributing](#contributing)  
+6. [Project Structure](#project-structure)
+
+---
+
+## Demo
+
+![ChessGame Screenshot](./docs/screenshot.png)  
+*Example of the Classic theme in action, with dark mode toggled off.*
+
+---
 
 ## Features
-- **Custom Graphics**: Each piece is drawn programmatically with JavaFX Canvas.
-- **Rule Enforcement**: Legal move generation, check/checkmate, stalemate detection.
-- **AI Opponent**: Integrates Stockfish engine; four difficulty settings (Easy, Medium, Hard, Expert).
-- **Network Play**: Host or join games over TCP/IP; built-in chat and connection status.
-- **UI Customization**: Predefined themes, dark/light mode toggle, board flip.
-- **Game Controls**: Click-to-move interface, promotion dialog, highlighted legal moves.
-- **Responsive Layout**: Auto-adjusts board size based on screen resolution.
 
-## Prerequisites
-- **Java 11+**
-- **JavaFX 11+** (if not bundled with your JDK)
-- **Maven** (or Gradle) for dependency management
-- **Stockfish** engine binary in project root or system PATH
+- **Play Modes**  
+  - Human vs. Human on the same machine  
+  - Human vs. AI powered by Stockfish (configurable search depth)  
+- **AI Difficulty**  
+  - Easy (depth 1), Medium (7), Hard (12), Expert (20)  
+- **Full Rules Enforcement**  
+  - Legal move validation for all piece types (King, Queen, Rook, Bishop, Knight, Pawn)  
+  - Castling (king- and queen-side) with move tracking  
+  - Pawn double-step, en passant capture, promotion dialog  
+  - Check, checkmate, and stalemate detection with flashing highlight  
+- **Customizable UI**  
+  - Multiple board themes (light/dark squares, border accents)  
+  - Toggle **Dark Mode** for the entire application  
+  - **Flip Board** control to view from Black’s perspective  
+  - Auto-scaling to fit any screen resolution (max square size 80px)  
+- **Developer-Friendly**  
+  - Modular piece-drawing via `Drawable` interface  
+  - Clear separation of board logic, move validation, AI integration  
+  - Easily extendable themes via `ChessTheme` enum  
 
-## Installation
-1. **Clone repository**
+---
 
-    ```bash
-    git clone https://github.com/yourusername/chess-game.git
-    cd chess-game
-    ```
+## Getting Started
 
-2. **Add Stockfish**
+### Prerequisites
 
-    - Download the latest Stockfish binary for your OS.
-    - Place the `stockfish` executable in the project root (next to `pom.xml`).
+- **Java 11+** (JDK with JavaFX modules)  
+- **Maven** (or Gradle) for build and dependency management  
+- Optionally, download [Stockfish](https://stockfishchess.org/) and place the binary in your system path  
 
-3. **Build**
+### Clone & Build
 
-    ```bash
-    mvn clean install
-    ```
+```bash
+# Clone the repository
+git clone https://github.com/your-username/javafx-chess-game.git
+cd javafx-chess-game
+
+# Build with Maven
+mvn clean package
+
+# Run the application
+mvn javafx:run
+
+or, after packaging
+
+java --module-path /path/to/javafx-sdk/lib \
+     --add-modules javafx.controls,javafx.fxml \
+     -jar target/chessgame.jar
+
+```
 
 ## Usage
-### Running Locally
 
-```bash
-mvn javafx:run
-```
-_or_
+### Game Settings
+1. **Play against AI**: Check/uncheck “Play against AI”  
+2. **AI Difficulty**: Select Easy, Medium, Hard, or Expert  
+3. **Play as**: Choose White or Black color  
+4. **New Game**: Reset board and settings  
 
-```bash
-java -jar target/chess-game.jar
-```
+### Theme Settings
+1. **Board Theme**: Pick from predefined color schemes  
+2. **Toggle Dark Mode**: Switch full UI to dark/light styling  
+3. **Flip Board**: Mirror board orientation (lets Black view from bottom)  
 
-### Menu Overview
-1. **Play vs AI**: Toggle AI, select difficulty, choose playing color.  
-2. **Network**: Enter IP & port, click **Host Game** or **Join Game**.  
-3. **Theme**: Select board theme, toggle dark mode, flip board.  
-4. **New Game**: Reset board and settings.  
+### Controls & Interaction
+- **Select & Move**: Click your piece, then click a highlighted square  
+- **Pawn Promotion**: On reaching last rank, choose Queen, Rook, Bishop, or Knight  
+- **Check Highlight**: King in check flashes red  
+- **Game Over Dialog**: Offers “Play Again” or “Quit” on checkmate/stalemate  
 
-## Configuration
-- **AI Difficulty**: Easy (depth 1), Medium (7), Hard (12), Expert (20).  
-- **Playing Color**: Choose White or Black before starting.  
-- **Network**: Default port `8888`; ensure firewall allows inbound/outbound TCP.
-
-## Controls
-- **Select & Move**: Click a piece, legal moves highlight, click destination.  
-- **Pawn Promotion**: Dialog appears when pawn reaches last rank.  
-- **Castling**: Move king two squares toward rook when eligible.  
-- **Flip Board**: Toggle orientation for alternate viewpoints.  
-- **Dark Mode**: Toggle light/dark UI coloring.
+---
 
 ## Contributing
-1. Fork the repository.  
-2. Create a feature branch:  
-    ```bash
-    git checkout -b feature-name
-    ```  
-3. Commit your changes:  
-    ```bash
-    git commit -m "Add feature"
-    ```  
-4. Push to branch:  
-    ```bash
-    git push origin feature-name
-    ```  
-5. Open a Pull Request.
 
-Please adhere to the existing code style and include unit tests where applicable.
+1. Fork this repository  
+2. Create your feature branch (`git checkout -b feature/YourFeature`)  
+3. Commit your changes (`git commit -m "Add YourFeature"`)  
+4. Push to the branch (`git push origin feature/YourFeature`)  
+5. Open a Pull Request  
 
-## License
-This project is licensed under the MIT License.
+Please follow the existing code style and include relevant tests.  
 
-## Acknowledgments
-- [Stockfish](https://stockfishchess.org/) for the powerful open-source chess engine.  
-- JavaFX community for tutorials and support.
+src/
+├── main/
+│   ├── java/
+│   │   └── ChessGame.java         ← Main Application
+│   │   ├── ChessBoard.java        ← UI canvas & rendering
+│   │   ├── pieces/                ← `ChessPiece` subclasses
+│   │   ├── ai/                    ← Stockfish engine wrapper
+│   │   └── themes/                ← `ChessTheme` definitions
+│   └── resources/
+│       └── stockfish/             ← (optional) Stockfish binary
+docs/
+├── screenshot.png
+README.md
+pom.xml
+
